Add vars to contest-level statements.

--- a/contest/statement/contest.rbx.tex
+++ b/contest/statement/contest.rbx.tex
@@ -3,12 +3,11 @@
 \usepackage{obi_new}
 \usepackage{import}
 
-\def\Ano{2024}
+\def\Ano{\VAR{vars.year}}
 \def\Modalidade{\VAR{contest.title}}
-\def\Data{08 de junho de 2024}
-\def\Duracao{5:00}
+\def\Data{\VAR{vars.date}}
 
-\begin{document} 
+\begin{document}
 \InsertTitlePage
 
 %- for problem in problems
