--- a/contest/statement/info.rbx.tex
+++ b/contest/statement/info.rbx.tex
@@ -18,7 +18,7 @@
 
 \vspace{1cm}
 {\Large \bf \VAR{contest.title}}\\ {Folha de Informações}\\[12pt]
-{\small  \em 08 de Junho de 2024}
+{\small  \em \VAR{vars.date}}
 \end{center}
 
 \vspace{0.5cm}
