Update template with more instructions.

--- a/contest/statement/maratona.sty
+++ b/contest/statement/maratona.sty
@@ -17,6 +17,7 @@
 \usepackage{xcolor}
 \usepackage{colortbl}
 \usepackage{tikz}
+\usepackage{subcaption}
 \usetikzlibrary{matrix,positioning,fit,scopes,chains}
 \let\mytitleformat\titleformat
 \let\titleformat\relax
