--- a/problem/statement/obi_new.sty
+++ b/problem/statement/obi_new.sty
@@ -1,4 +1,22 @@
 \usepackage{caption}
+\usepackage{epsfig}
+\usepackage{moreverb}
+\usepackage{float}
+\usepackage{fancyvrb}
+\usepackage{multicol}
+\usepackage{amsmath}
+\usepackage{hyperref}
+\usepackage{ifthen}
+\usepackage{titlesec}
+\usepackage{pmboxdraw}
+\usepackage{xcolor}
+\usepackage{colortbl}
+\usepackage{tikz}
+\usepackage{subcaption}
+\usetikzlibrary{matrix,positioning,fit,scopes,chains}
+\let\mytitleformat\titleformat
+\let\titleformat\relax
+\usepackage{logicpuzzle}
 
 \captionsetup[figure]{labelformat=empty}
 
